Fix Description CSS on small screens

--- a/app/client-react/components/Description.scss
+++ b/app/client-react/components/Description.scss
@@ -1,4 +1,8 @@
 .ressource {
+  .clear-right {
+    clear: right;
+  }
+
   margin-top: 20px;
 
   & > span {
@@ -13,7 +17,7 @@
       margin: 0;
     }
 
-    .txtright {
+    .txtbold {
       font-weight: bold;
     }
   }
